# GC_SiliconRod_Refactor

./: .gitignore  ARCHITECTURE.md  DEPLOY.md  DEPLOY_yancheng.md  LICENSE  LICENSING.md  Run.hdev  path_backup_20260516_214007.txt  pyproject.toml
BV相机Sample/: C#.lnk  C++.lnk  VB.lnk
config备份/: config - 盐城备份.json  config宜宾备份新.json
models/: Model_cls.m
scripts/: batch_infer.py
scripts/deploy/: build_launcher.bat  build_license_guard.bat  build_zip.py  check_deps.bat  check_deps.py  dev_uv.bat  install_hook.bat  install_hook.py  launcher.py  新版本.bat  (+2 more)
sirod_inspector/: codetcp.py  config.dev.json  config.example.json  config.json  config.v2.example.json  config.yancheng-local.json  config.yancheng.v2.json  gen_manual.py  main.py  main_camera.py  pyi_rth_halcon.py  shift_stats.json
tests/: _iteration_log.md  _test_utils.py  batch_infer_latest.py  check_env.py  demo_save_images.py  demo_ui_mock_camera.py  demo_ui_one_lap.py  demo_ui_test_image.py  diag_scanner.py  diag_ui_no_callback.py  mock_hikvision_scanner.py  regress_config_atomic_save.py  regress_e2e.py  regress_image_cleaner.py  regress_overlay_color_stable.py  regress_per_class_gate.py  regress_per_class_judge.py  regress_rod_id_sanitize.py  scale_test_judge_params.py  scale_test_real_images.py  smoke_camera.py  smoke_inference.py  smoke_inspect_data_contract.py  smoke_inspect_engine.py  smoke_license_guard.py  smoke_live_pipeline.py  smoke_main_camera.py  smoke_pipeline.py  smoke_preprocess.py  smoke_scanner.py  smoke_scanner_watchdog.py  smoke_stress.py  stability_memory_30iter.py  stress_ui_ng_reset_click.py
tools/: get_machine_id.py  license_gen.py  sirod_license_hook.py  sirod_lock.pth
(+36 files in other folders)
